Make it work with Docker.

--- a/app/drink_consumption/templates/dashboard_2.html
+++ b/app/drink_consumption/templates/dashboard_2.html
@@ -7,7 +7,7 @@
 
   function connect() {
     var ws = new WebSocket(
-      "wss://" + window.location.host + "/ws/dashboard/"
+      "ws://" + window.location.host + "/ws/dashboard/"
     );
 
     ws.onopen = function (e) {
