Implemented Cans with the refill_capacity_override and adding the capacity in the reffil.

--- a/app/drink_consumption/templates/dashboard_2.html
+++ b/app/drink_consumption/templates/dashboard_2.html
@@ -198,7 +198,7 @@
 
   <div id="notification-error" class="notification-error">
     <p><h1 id="notification-error-title" >Error</h1></p>
-    <duliv id="notification-error-description"></ul>
+    <ul id="notification-error-description"></ul>
   </div>
 
   <section class="ftco-top">
