Removed batch number.

--- a/app/drink_consumption/templates/pos.html
+++ b/app/drink_consumption/templates/pos.html
@@ -113,7 +113,7 @@
               inner_html += `
                 <div class="col-md-12 col-lg-6 col-xl-4" onclick="select_can('` + can.batch_number + `')" >
                   <div class="table-item" id="can-` + can.batch_number + `" >
-                      <span class="h4">#` + can.batch_number + ` - ` + can.name + `</span><br/><span class="h5">` + can.cost + ` $ - ` + can.remaining + ` cans restantes</span>
+                      <span class="h4">` + can.name + `</span><br/><span class="h5">` + can.cost + ` $ - ` + can.remaining + ` cans restantes</span>
                   </div>
                 </div>`;
             }
